--- a/biblio.bib
+++ b/biblio.bib
@@ -27,3 +27,22 @@ month={},}
     howpublished = {\url{http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ihi0022e/index.html}},
     note = {Accessed: 2017-03-09},
 }
+
+@book{gtd-book,
+  added-at = {2008-06-27T11:45:34.000+0200},
+  author = {Allen, David},
+  biburl = {https://www.bibsonomy.org/bibtex/2faa6b0ddb1484a552f99eef6ad77889f/cschenk},
+  description = {The methodology is great but needs to be tailored to ones specific needs - I felt like I wasn't one from the audience Allen wrote this book for.},
+  interhash = {4f54d8c8802c230664da91d651f12a8e},
+  intrahash = {faa6b0ddb1484a552f99eef6ad77889f},
+  keywords = {art book done getting gtd personal-development productivity rating:4 read:2007 stress-free things},
+  month = {January},
+  note = {ISBN-10: 0142000280
+ISBN-13: 978-0142000281},
+  publisher = {Penguin},
+  timestamp = {2008-06-27T11:47:13.000+0200},
+  title = {Getting Things Done. The Art of Stress-Free Productivity},
+  url = {http://www.davidco.com/},
+  year = 2003
+}
+
