--- a/biblio.bib
+++ b/biblio.bib
@@ -61,3 +61,9 @@ ISBN-13: 978-0142000281},
     abstract =  {The OAuth 2.0 authorization framework enables a third-party application to obtain limited access to an HTTP service, either on behalf of a resource owner by orchestrating an approval interaction between the resource owner and the HTTP service, or by allowing the third-party application to obtain access on its own behalf. This specification replaces and obsoletes the OAuth 1.0 protocol described in RFC 5849. {[}STANDARDS-TRACK{]}},
 }
 
+@misc{workflowgtdref,
+    title = {Getting Things Done: The Art of Stress Free Productivity by David Allen (Nicole Schlinger Book Review)},
+    howpublished = {\url{https://medium.com/@nicoleschlinger/getting-things-done-the-art-of-stress-free-productivity-by-david-allen-nicole-schlinger-book-688e1440290d,
+    note = {Accessed: 2024-05-19}
+}
+
