--- a/biblio.bib
+++ b/biblio.bib
@@ -1,32 +1,3 @@
-@book{mauerer-book,
- author = {Mauerer, Wolfgang},
- title = {Professional Linux Kernel Architecture},
- year = {2008},
- isbn = {0470343435, 9780470343432},
- publisher = {Wrox Press Ltd.},
- address = {Birmingham, UK, UK},
-} 
-
-@ARTICLE{paper-juancarlos,
-author={A. Garcia-Garcia and J. C. Saez and M. Prieto-Matias},
-journal={IEEE Transactions on Computers},
-title={Contention-Aware Fair Scheduling for Asymmetric Single-ISA Multicore Systems},
-year={2018},
-volume={},
-number={},
-pages={1-1},
-keywords={Degradation;Hardware;Measurement;Multicore processing;Runtime;Throughput;Asymmetric multicore;Linux kernel;fairness;operating systems;scheduling;shared resource contention},
-doi={10.1109/TC.2018.2836418},
-ISSN={0018-9340},
-month={},}
-
-@misc{amba,
-    title = "{AMBA(R)} {AXI(TM)} and {ACE(TM)} Protocol Specification",
-    author = {ARM},
-    year = {2011},
-    howpublished = {\url{http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ihi0022e/index.html}},
-    note = {Accessed: 2017-03-09},
-}
 
 @book{gtd-book,
   added-at = {2008-06-27T11:45:34.000+0200},
@@ -61,3 +32,66 @@ ISBN-13: 978-0142000281},
     abstract =  {The OAuth 2.0 authorization framework enables a third-party application to obtain limited access to an HTTP service, either on behalf of a resource owner by orchestrating an approval interaction between the resource owner and the HTTP service, or by allowing the third-party application to obtain access on its own behalf. This specification replaces and obsoletes the OAuth 1.0 protocol described in RFC 5849. {[}STANDARDS-TRACK{]}},
 }
 
+@book{10.5555/2187809,
+    author = {Norman, Donald A.},
+    title = {The Design of Everyday Things},
+    year = {2002},
+    isbn = {9780465067107},
+    publisher = {Basic Books, Inc.},
+    address = {USA},
+    abstract = {Revealing how smart design is the new competitive frontier, this innovative book is a powerful primer on how--and why--some products satisfy customers while others only frustrate them.}
+}
+
+@misc{react-navigation,
+    title = {React Navigation},
+    howpublished = {\url{https://reactnavigation.org/}},
+    note = {Accessed: 2024-05-19}
+}
+
+@misc{drawer-navigation,
+    title = {Drawer Navigation},
+    howpublished = {\url{https://reactnavigation.org/docs/drawer-navigator/}},
+    note = {Accessed: 2024-05-19}
+}
+
+@misc{axios,
+    title = {Axios},
+    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+    note = {Accessed: 2010-09-30}
+}
+
+@misc{react-native-calendars,
+    title = {{MS Windows NT} Kernel Description},
+    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+    note = {Accessed: 2010-09-30}
+}
+
+@misc{react-native-async-storage,
+    title = {{MS Windows NT} Kernel Description},
+    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+    note = {Accessed: 2010-09-30}
+}
+
+@misc{Markdown-display,
+    title = {{MS Windows NT} Kernel Description},
+    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+    note = {Accessed: 2010-09-30}
+}
+
+@misc{Modern-datepicker,
+    title = {{MS Windows NT} Kernel Description},
+    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+    note = {Accessed: 2010-09-30}
+}
+
+@misc{swipeable,
+    title = {{MS Windows NT} Kernel Description},
+    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+    note = {Accessed: 2010-09-30}
+}
+
+@misc{wheelcolorpicker,
+    title = {{MS Windows NT} Kernel Description},
+    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+    note = {Accessed: 2010-09-30}
+}
