--- a/biblio.bib
+++ b/biblio.bib
@@ -102,3 +102,9 @@ ISBN-13: 978-0142000281},
     note = {Accessed: 2024-05-19}
 }
 
+@misc{bycript,
+    title = {Librería node.bycript.js},
+    howpublished = {\url{https://www.npmjs.com/package/bcrypt}},
+    note = {Accessed: 2024-05-19}
+}
+
