referencia enfoques agiles

--- a/biblio.bib
+++ b/biblio.bib
@@ -102,3 +102,9 @@ ISBN-13: 978-0142000281},
     note = {Accessed: 2024-05-19}
 }
 
+@misc{enfoquesagiles,
+    title = {Enfoque Adaptativo o predictivo, ¿cuál elegir?},
+    howpublished = {\url{https://www.linkedin.com/pulse/enfoque-adaptativo-o-predictivo-cu%C3%A1l-elegir-juan-luis-vila-grau/}},
+    note = {Accessed: 2024-05-19}
+}
+
