Alexa diagrama secuencia ref

--- a/biblio.bib
+++ b/biblio.bib
@@ -113,3 +113,9 @@ ISBN-13: 978-0142000281},
     note = {Accessed: 2024-05-19}
 }
 
+@misc{alexadiagrama,
+    title = {Authorization code grant flow},
+    howpublished = {\url{https://developer.amazon.com/en-US/docs/alexa/account-linking/configure-authorization-code-grant.html}},
+    note = {Accessed: 2024-05-19}
+}
+
