--- a/biblio.bib
+++ b/biblio.bib
@@ -56,44 +56,44 @@ ISBN-13: 978-0142000281},
 
 @misc{axios,
     title = {Axios},
-    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-    note = {Accessed: 2010-09-30}
+    howpublished = {\url{https://axios-http.com/es/docs/intro}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{react-native-calendars,
-    title = {{MS Windows NT} Kernel Description},
-    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-    note = {Accessed: 2010-09-30}
+    title = {React Native Calendars},
+    howpublished = {\url{https://github.com/wix/react-native-calendars}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{react-native-async-storage,
-    title = {{MS Windows NT} Kernel Description},
-    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-    note = {Accessed: 2010-09-30}
+    title = {React Native Async Storage},
+    howpublished = {\url{https://www.npmjs.com/package/@react-native-async-storage/async-storage}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{Markdown-display,
-    title = {{MS Windows NT} Kernel Description},
-    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-    note = {Accessed: 2010-09-30}
+    title = {Markdown Display},
+    howpublished = {\url{https://www.npmjs.com/package/react-native-markdown-display}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{Modern-datepicker,
-    title = {{MS Windows NT} Kernel Description},
-    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-    note = {Accessed: 2010-09-30}
+    title = {Modern Datepicker},
+    howpublished = {\url{https://kiarash-z.github.io/react-modern-calendar-datepicker/}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{swipeable,
-    title = {{MS Windows NT} Kernel Description},
-    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-    note = {Accessed: 2010-09-30}
+    title = {Swipeable},
+    howpublished = {\url{https://docs.swmansion.com/react-native-gesture-handler/docs/components/swipeable/}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{wheelcolorpicker,
-    title = {{MS Windows NT} Kernel Description},
-    howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-    note = {Accessed: 2010-09-30}
+    title = {Wheel Color Picker},
+    howpublished = {\url{https://www.npmjs.com/package/react-native-wheel-color-picker}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{workflowgtdref,
@@ -104,7 +104,9 @@ ISBN-13: 978-0142000281},
 
 @misc{enfoquesagiles,
     title = {Enfoque Adaptativo o predictivo, ¿cuál elegir?},
+    author = {Juan Luis Vila Grau},
     howpublished = {\url{https://www.linkedin.com/pulse/enfoque-adaptativo-o-predictivo-cu%C3%A1l-elegir-juan-luis-vila-grau/}},
+    note = {Accessed: 2024-05-19}
 }
 
 @misc{bycript,
@@ -119,3 +121,18 @@ ISBN-13: 978-0142000281},
     note = {Accessed: 2024-05-19}
 }
 
+@phdthesis{10.5555/932295,
+    author = {Fielding, Roy Thomas and Taylor, Richard N.},
+    title = {Architectural styles and the design of network-based software architectures},
+    year = {2000},
+    isbn = {0599871180},
+    publisher = {University of California, Irvine},
+    abstract = {The World Wide Web has succeeded in large part because its software architecture has been designed to meet the needs of an Internet-scale distributed hypermedia system. The Web has been iteratively developed over the past ten years through a series of modifications to the standards that define its architecture. In order to identify those aspects of the Web that needed improvement and avoid undesirable modifications, a model for the modern Web architecture was needed to guide its design, definition, and deployment. Software architecture research investigates methods for determining how best to partition a system, how components identify and communicate with each other, how information is communicated, how elements of a system can evolve independently, and how all of the above can be described using formal and informal notations. My work is motivated by the desire to understand and evaluate the architectural design of network-based application software through principled use of architectural constraints, thereby obtaining the functional, performance, and social properties desired of an architecture. An architectural style is a named, coordinated set of architectural constraints. This dissertation defines a framework for understanding software architecture via architectural styles and demonstrates how styles can be used to guide the architectural design of network-based application software. A survey of architectural styles for network-based applications is used to classify styles according to the architectural properties they induce on an architecture for distributed hypermedia. I then introduce the Representational State Transfer (REST) architectural style and describe how REST has been used to guide the design and development of the architecture for the modern Web. REST emphasizes scalability of component interactions, generality of interfaces, independent deployment of components, and intermediary components to reduce interaction latency, enforce security, and encapsulate legacy systems. I describe the software engineering principles guiding REST and the interaction constraints chosen to retain those principles, contrasting them to the constraints of other architectural styles. Finally, I describe the lessons learned from applying REST to the design of the Hypertext Transfer Protocol and Uniform Resource Identifier standards, and from their subsequent deployment in Web client and server software.},
+    note = {AAI9980887}
+}
+
+@misc{express,
+    title = {Express.js},
+    howpublished = {\url{https://expressjs.com/}},
+    note = {Accessed: 2024-05-19}
+}
