--- a/biblio.bib
+++ b/biblio.bib
@@ -136,3 +136,9 @@ ISBN-13: 978-0142000281},
     howpublished = {\url{https://expressjs.com/}},
     note = {Accessed: 2024-05-19}
 }
+
+@misc{expo,
+    title = {Expo},
+    howpublished = {\url{https://expo.dev/}},
+    note = {Accessed: 2024-05-19}
+}
