actualizado libro diseño

--- a/biblio.bib
+++ b/biblio.bib
@@ -16,7 +16,15 @@ ISBN-13: 978-0142000281},
   url = {http://www.davidco.com/},
   year = 2003
 }
-
+@book{design-book,
+    author = {Norman, Donald A.},
+    title = {The Design of Everyday Things},
+    year = {2002},
+    isbn = {9780465067107},
+    publisher = {Basic Books, Inc.},
+    address = {USA},
+    abstract = {Revealing how smart design is the new competitive frontier, this innovative book is a powerful primer on how--and why--some products satisfy customers while others only frustrate them.}
+}
 @misc{rfc6749,
     series =    {Request for Comments},
     number =    6749,
