contribuciones terminadas a falta de revision

--- a/biblio.bib
+++ b/biblio.bib
@@ -25,6 +25,14 @@ ISBN-13: 978-0142000281},
     address = {USA},
     abstract = {Revealing how smart design is the new competitive frontier, this innovative book is a powerful primer on how--and why--some products satisfy customers while others only frustrate them.}
 }
+@book{rn-book,
+  title={Fullstack React Native: Create Beautiful Mobile Apps with JavaScript and React Native},
+  author={Djirdeh, H. and Accomazzo, A. and Shoemaker, S.},
+  isbn={9781728995557},
+  url={https://books.google.es/books?id=HXk6wQEACAAJ},
+  year={2019},
+  publisher={Amazon Digital Services LLC - KDP Print US}
+}
 @misc{rfc6749,
     series =    {Request for Comments},
     number =    6749,
