Arreglos en contribucion

--- a/biblio.bib
+++ b/biblio.bib
@@ -158,3 +158,27 @@ ISBN-13: 978-0142000281},
     howpublished = {\url{https://expo.dev/}},
     note = {Accessed: 2024-05-19}
 }
+
+@misc{fcc-node
+    author = {freeCodeCamp},
+    title = {Node.js and Express.js - Full Course}, 
+    month = {Apr},
+    year = {2021},
+    url = {https://www.youtube.com/watch?v=Oe421EPjeBE}
+}
+
+@misc{rn-website
+    author = {Meta Platforms},
+    title = {React Native Learn once, write anywhere.}, 
+    year = {2024},
+    url = {https://reactnative.dev}, 
+    note ={Guides and Components} 
+}
+
+@misc{fcc-rn
+    author = {freeCodeCamp}, 
+    title = {React Native Course – Android and iOS App Development}, 
+    moth = {Apr}, 
+    year = {2023}, 
+    url = {https://www.youtube.com/watch?v=obH0Po_RdWk}
+}
