ultimos cambios y mindmap

--- a/biblio.bib
+++ b/biblio.bib
@@ -182,3 +182,11 @@ ISBN-13: 978-0142000281},
     year = {2023}, 
     url = {https://www.youtube.com/watch?v=obH0Po_RdWk}
 }
+
+@misc{gtd-tmi
+    author = {Jenn David-Lang}, 
+    title = {Summary of the Summary: Getting Things Done: The Art of Stress-Free Productivity by David Allen}, 
+    year = {2017}, 
+    url = {https://www.youtube.com/watch?v=obH0Po_RdWk}, 
+    note = {Summary of the book Getting Things Done: The Art of Stress-Free Productivity by David Allen} 
+}
