--- a/biblio.bib
+++ b/biblio.bib
@@ -190,3 +190,51 @@ ISBN-13: 978-0142000281},
     url = {https://www.youtube.com/watch?v=obH0Po_RdWk}, 
     note = {Summary of the book Getting Things Done: The Art of Stress-Free Productivity by David Allen} 
 }
+
+@software{nirvana
+    author = {Nirvanahq Inc.}, 
+    title = {NirvanaHQ}, 
+    year = {2024}, 
+    url = {https://www.nirvanahq.com}, 
+    note = {NirvanaHQ, Built for Getting Things Done}, 
+}
+
+@software{todoist
+    author = {Doist Inc.}, 
+    title = {Todoist}, 
+    year = {2024}, 
+    url = {https://todoist.com/es}, 
+    note = {Todoist 2024}, 
+}
+
+@software{notion
+    author = {Notion Labs, Inc.}, 
+    title = {Notion}, 
+    year = {2024}, 
+    url = {https://www.notion.so/es-es}, 
+    note = {Notion Labs, Inc 2024}, 
+}
+
+@software{things
+    author = {Cultured Code}, 
+    title = {Things}, 
+    year = {2024}, 
+    url = {https://culturedcode.com/things/}, 
+    note = {Things}, 
+}
+
+@software{omni
+    author = {The Omni Group}, 
+    title = {Introducing OmniFocus 4}, 
+    year = {2024}, 
+    url = {https://www.omnigroup.com/omnifocus/}, 
+    note = {Omnifocus version 4}, 
+}
+
+@software{ticktick
+    author = {TickTick Team}, 
+    title = {TickTick}, 
+    year = {2024}, 
+    url = {https://ticktick.com}, 
+    note = {TickTick Stay Organized Stay Creative}, 
+}
