--- a/biblio.bib
+++ b/biblio.bib
@@ -159,7 +159,7 @@ ISBN-13: 978-0142000281},
     note = {Accessed: 2024-05-19}
 }
 
-@misc{fcc-node
+@misc{fcc-node,
     author = {freeCodeCamp},
     title = {Node.js and Express.js - Full Course}, 
     month = {Apr},
@@ -167,7 +167,7 @@ ISBN-13: 978-0142000281},
     url = {https://www.youtube.com/watch?v=Oe421EPjeBE}
 }
 
-@misc{rn-website
+@misc{rn-website,
     author = {Meta Platforms},
     title = {React Native Learn once, write anywhere.}, 
     year = {2024},
@@ -175,15 +175,15 @@ ISBN-13: 978-0142000281},
     note ={Guides and Components} 
 }
 
-@misc{fcc-rn
+@misc{fcc-rn,
     author = {freeCodeCamp}, 
-    title = {React Native Course – Android and iOS App Development}, 
+    title = {React Native Course - Android and iOS App Development}, 
     moth = {Apr}, 
     year = {2023}, 
     url = {https://www.youtube.com/watch?v=obH0Po_RdWk}
 }
 
-@misc{gtd-tmi
+@misc{gtd-tmi,
     author = {Jenn David-Lang}, 
     title = {Summary of the Summary: Getting Things Done: The Art of Stress-Free Productivity by David Allen}, 
     year = {2017}, 
@@ -191,7 +191,7 @@ ISBN-13: 978-0142000281},
     note = {Summary of the book Getting Things Done: The Art of Stress-Free Productivity by David Allen} 
 }
 
-@software{nirvana
+@software{nirvana,
     author = {Nirvanahq Inc.}, 
     title = {NirvanaHQ}, 
     year = {2024}, 
@@ -199,7 +199,7 @@ ISBN-13: 978-0142000281},
     note = {NirvanaHQ, Built for Getting Things Done}, 
 }
 
-@software{todoist
+@software{todoist,
     author = {Doist Inc.}, 
     title = {Todoist}, 
     year = {2024}, 
@@ -207,7 +207,7 @@ ISBN-13: 978-0142000281},
     note = {Todoist 2024}, 
 }
 
-@software{notion
+@software{notion,
     author = {Notion Labs, Inc.}, 
     title = {Notion}, 
     year = {2024}, 
@@ -215,7 +215,7 @@ ISBN-13: 978-0142000281},
     note = {Notion Labs, Inc 2024}, 
 }
 
-@software{things
+@software{things,
     author = {Cultured Code}, 
     title = {Things}, 
     year = {2024}, 
@@ -223,7 +223,7 @@ ISBN-13: 978-0142000281},
     note = {Things}, 
 }
 
-@software{omni
+@software{omni,
     author = {The Omni Group}, 
     title = {Introducing OmniFocus 4}, 
     year = {2024}, 
@@ -231,7 +231,7 @@ ISBN-13: 978-0142000281},
     note = {Omnifocus version 4}, 
 }
 
-@software{ticktick
+@software{ticktick,
     author = {TickTick Team}, 
     title = {TickTick}, 
     year = {2024}, 
