--- a/biblio.bib
+++ b/biblio.bib
@@ -187,7 +187,7 @@ ISBN-13: 978-0142000281},
     author = {Jenn David-Lang}, 
     title = {Summary of the Summary: Getting Things Done: The Art of Stress-Free Productivity by David Allen}, 
     year = {2017}, 
-    url = {https://www.youtube.com/watch?v=obH0Po_RdWk}, 
+    url = {https://saanys.org/wp-content/uploads/2020/10/The-Main-Idea-Getting-Things-Done-August-2017.pdf}, 
     note = {Summary of the book Getting Things Done: The Art of Stress-Free Productivity by David Allen} 
 }
 
