Contribuciones y guia despliegue

--- a/biblio.bib
+++ b/biblio.bib
@@ -153,6 +153,12 @@ ISBN-13: 978-0142000281},
     note = {Accessed: 2024-05-19}
 }
 
+@misc{rn-windows-macos,
+    title = {React Native for Windows + macOS},
+    howpublished = {\url{https://microsoft.github.io/react-native-windows/}},
+    note = {Accessed: 2024-05-19}
+}
+
 @misc{expo,
     title = {Expo},
     howpublished = {\url{https://expo.dev/}},
