actualizaciones en bibliografia

--- a/biblio.bib
+++ b/biblio.bib
@@ -244,3 +244,27 @@ ISBN-13: 978-0142000281},
     url = {https://ticktick.com}, 
     note = {TickTick Stay Organized Stay Creative}, 
 }
+
+@misc{pomodoro
+    author = {Alicia Raeburn}, 
+    title = {La técnica Pomodoro: cómo maximizar la productividad del equipo},
+    year = {2023}, 
+    url = {https://asana.com/es/resources/pomodoro-technique}, 
+    note = {Estrategia de concentración durante periodos de tiempo determinados.}
+}
+
+@misc {kanban
+    author = {MAX REHKOPF}, 
+    title = {¿Qué es un tablero de kanban?},
+    year = {2024}, 
+    url = {https://www.atlassian.com/es/agile/kanban/boards#:~:text=Un%20tablero%20de%20kanban%20es,orden%20de%20su%20trabajo%20diario.}, 
+    note = {Método visual para la gestión de proyectos.}
+}
+
+@misc {eisen
+    author = {Team Asana}, 
+    title = {La matriz de Eisenhower: cómo priorizar tu lista de tareas pendientes},
+    year = {2024}, 
+    url = {https://asana.com/es/resources/eisenhower-matrix}, 
+    note = {Herramienta de gestión de tareas que ayuda a distinguir entre tareas urgentes e importantes.}
+}
