arreglos imagenes y formatos

--- a/biblio.bib
+++ b/biblio.bib
@@ -245,7 +245,7 @@ ISBN-13: 978-0142000281},
     note = {TickTick Stay Organized Stay Creative}, 
 }
 
-@misc{pomodoro
+@misc{pomodoro,
     author = {Alicia Raeburn}, 
     title = {La técnica Pomodoro: cómo maximizar la productividad del equipo},
     year = {2023}, 
@@ -253,7 +253,7 @@ ISBN-13: 978-0142000281},
     note = {Estrategia de concentración durante periodos de tiempo determinados.}
 }
 
-@misc {kanban
+@misc {kanban,
     author = {MAX REHKOPF}, 
     title = {¿Qué es un tablero de kanban?},
     year = {2024}, 
@@ -261,7 +261,7 @@ ISBN-13: 978-0142000281},
     note = {Método visual para la gestión de proyectos.}
 }
 
-@misc {eisen
+@misc {eisen,
     author = {Team Asana}, 
     title = {La matriz de Eisenhower: cómo priorizar tu lista de tareas pendientes},
     year = {2024}, 
