--- a/biblio.bib
+++ b/biblio.bib
@@ -245,6 +245,27 @@ ISBN-13: 978-0142000281},
     note = {TickTick Stay Organized Stay Creative}, 
 }
 
+@software{balsamiq,
+  author = {{Balsamiq Studios, LLC}},
+  title = {Balsamiq: The effortless wireframing tool built for your big ideas},
+  year = {2024},
+  url = {https://balsamiq.com/},
+}
+
+@software{figma,
+  author = {{Figma, Inc.}},
+  title = {Figma: How you design , align , and build matters. Do it together with Figma},
+  year = {2024},
+  url = {https://www.figma.com/},
+}
+
+@software{morgan,
+  author = {Schlinkert, Jon},
+  title = {Morgan: HTTP request logger middleware for Node.js},
+  year = {2024},
+  url = {https://github.com/expressjs/morgan},
+}
+
 @misc{pomodoro,
     author = {Alicia Raeburn}, 
     title = {La técnica Pomodoro: cómo maximizar la productividad del equipo},
